--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,14 @@
 @import url('./reset.css');
 @import url('./vite-promo.css');
 @import url('./header.css');
+@import url('./hero.css');
+@import url('./about_us.css');
+@import url('./price.css');
+@import url('./our_products.css');
+@import url('./bestsellers.css');
+@import url('./clients_reviews.css');
+@import url('./subscription.css');
+@import url('./footer.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
