--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,18 +16,37 @@
 @import url('./subscription.css');
 @import url('./footer.css');
 
+body {
+  font-family: font-family: 'Roboto', sans-serif;
+  color: #0A224A;
+  background-color: #FFF;
+}
+
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  --blue-font: #0A224A;
+  --background_1: #7A7A7A;
+  --background_2: #B6B6B6;
+  --background_3: #D9D9D9;
+  --light-blue: #F7FAFF;
+
+  /* font-size: 18px;
   line-height: 24px;
-  font-weight: 400;
+  font-weight: 400; */
+  /* color: #242424;
+  background-color: rgba(255, 255, 255, 0.87); */
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
+  /* font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; */
+}
+
+.container {
+  min-width: 320px;
+  max-width: 375px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-right: auto;
+  margin-left: auto;
 }
