--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,7 +17,7 @@
 @import url('./footer.css');
 
 body {
-  font-family: font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #0A224A;
   background-color: #FFF;
 }
