--- a/src/partials/our_products.html
+++ b/src/partials/our_products.html
@@ -6,25 +6,28 @@
         <div class="products-card">
           <picture>
             <source
-              srcset="./images/product1.jpg 1x, ./images/product1-2x.jpg 2x"
+              srcset="
+                ./src/img/our_products/product1.jpg    1x,
+                ./src/img/our_products/product1-2x.jpg 2x
+              "
               media="(min-width:1440px)"
             />
             <source
               srcset="
-                ./images/product1-tab.jpg    1x,
-                ./images/product1-tab-2x.jpg 2x
+                ./src/img/our_products/product1-tab.jpg    1x,
+                ./src/img/our_products/product1-tab-2x.jpg 2x
               "
               media="(min-width:768px)"
             />
             <source
               srcset="
-                ./images/product1-mob.jpg    1x,
-                ./images/product1-mob-2x.jpg 2x
+                ./src/img/our_products/product1-mob.jpg    1x,
+                ./src/img/our_products/product1-mob-2x.jpg 2x
               "
               media="(min-width:320px)"
             />
             <img
-              src="./images/product1.jpg"
+              src="./src/img/our_products/product1.jpg"
               alt="vooden minimalist
               storage"
               width="343px"
@@ -38,17 +41,24 @@
         <div class="products-card">
           <picture>
             <source
-              srcset="./images/product2.jpg 1x, ./images/product2-2x.jpg 2x"
+              srcset="
+                ./src/img/our_products/product2.jpg    1x,
+                ./src/img/our_products/product2-2x.jpg 2x
+              "
               media="(min-width:1440px)"
             />
             <source
               srcset="
-                ./images/product2-tab.jpg    1x,
-                ./images/product2-tab-2x.jpg 2x
+                ./src/img/our_products/product2-tab.jpg    1x,
+                ./src/img/our_products/product2-tab-2x.jpg 2x
               "
               media="(min-width:768px)"
             />
-            <img src="./images/product2.jpg" alt="blue sofa" width="343px" />
+            <img
+              src="./src/img/our_products/product2.jpg"
+              alt="blue sofa"
+              width="343px"
+            />
           </picture>
           <h3 class="products-description">Handcrafted minimalist seating</h3>
         </div>
@@ -57,10 +67,17 @@
         <div class="products-card">
           <picture>
             <source
-              srcset="./images/product3.jpg 1x, ./images/product3-2x.jpg 2x"
+              srcset="
+                ./src/img/our_products/product3.jpg    1x,
+                ./src/img/our_products/product3-2x.jpg 2x
+              "
               media="(min-width:1440px)"
             />
-            <img src="./images/product3.jpg" alt="metal table" width="343px" />
+            <img
+              src="./src/img/our_products/product3.jpg"
+              alt="metal table"
+              width="343px"
+            />
           </picture>
           <h3 class="products-description">Sleek and simple tables</h3>
         </div>
@@ -69,10 +86,17 @@
         <div class="products-card">
           <picture>
             <source
-              srcset="./images/product4.jpg 1x, ./images/product4-2x.jpg 2x"
+              srcset="
+                ./src/img/our_products/product4.jpg    1x,
+                ./src/img/our_products/product4-2x.jpg 2x
+              "
               media="(min-width:1440px)"
             />
-            <img src="./images/product4.jpg" alt="blue chair" width="343px" />
+            <img
+              src="./src/img/our_products/product4.jpg"
+              alt="blue chair"
+              width="343px"
+            />
           </picture>
           <h3 class="products-description">
             Minimalist seating for every space
