--- a/src/css/subscription.css
+++ b/src/css/subscription.css
@@ -3,10 +3,6 @@
   background-color: #fff;
 }
 
-.subscription-container {
-  padding: 0 16px;
-}
-
 .title {
   color: var(--blue-font, #0a224a);
   font-size: 28px;
@@ -160,6 +156,10 @@ form {
     padding: 100px 0;
   }
 
+  .subscription .container {
+    max-width: 734px;
+  }
+
   .title {
     text-align: left;
     font-size: 32px;
@@ -213,9 +213,10 @@ form {
     padding: 100px 0 86px;
   }
 
-  .subscription-container {
+  .subscription .container {
     display: flex;
     justify-content: center;
+    min-width: 1440px;
     gap: 100px;
   }
 
