--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -1,5 +1,5 @@
 <section class="subscription">
-    <div class="subscription-container">
+    <div class="container">
         <div class="newsleter">
             <h2 class="title">Newsletter</h2>
             <p class="text">Every week we will send you new designs and information about sales.</p>
