--- a/src/css/our_products.css
+++ b/src/css/our_products.css
@@ -54,6 +54,9 @@
   .products img {
     width: 344px;
   }
+  .products {
+    padding-bottom: 100px;
+  }
 }
 @media screen and (min-width: 1440px) {
   .products > .container {
