--- a/src/css/price.css
+++ b/src/css/price.css
@@ -73,6 +73,9 @@ hr {
     max-width: 1096px;
     margin: 0 auto;
   }
+  .products {
+    padding-bottom: 100px;
+  }
 }
 @media screen and (min-width: 1440px) {
   .price > .container {
