--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -39,7 +39,7 @@
                 <source media="(max-width: 767px)"
                     srcset="./img/subscription-img/sub-pic-mob-x1.jpg, ./img/subscription-img/sub-pic-mob-x2.jpg 2x">
                 <source media="(min-width: 768px) and (max-width: 1439px)"
-                    srcset="./img/subscription-img/.jpg, ./img/subscription-img/sub-pic-tab-x2.jpg 2x">
+                    srcset="./img/subscription-img/sub-pic-tab-x1.jpg, ./img/subscription-img/sub-pic-tab-x2.jpg 2x">
                 <source media="(min-width: 1440px)"
                     srcset="./img/subscription-img/sub-pic-dec-x1.jpg, ./img/subscription-img/sub-pic-dec-x2.jpg 2x">
                 <img class="subscription-img" src="./img/subscription-img/sub-pic-dec-x1.jpg" alt="book on table">
