link on subscription

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,12 +1,9 @@
 <section class="hero">
-	<div class="container">
-			<h1 class="hero-title">
-				Modern and minimalist furniture for you
-			</h1>
-			<p class="hero-text">Add a touch of elegance to your space with handcrafted furniture pieces</p>
-			<button class="hero-btn" type="button">
-				Subscribe
-			</button>
-
-	</div>
+  <div class="container">
+    <h1 class="hero-title">Modern and minimalist furniture for you</h1>
+    <p class="hero-text">
+      Add a touch of elegance to your space with handcrafted furniture pieces
+    </p>
+    <a class="hero-btn" type="button" href="#subscription"> Subscribe </a>
+  </div>
 </section>
