--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,12 +1,10 @@
-
-.hero { 
+.hero {
   background-repeat: no-repeat;
   background-position: top;
   max-width: 375px;
   min-height: 717px;
   margin: 0 auto;
-  background-image: 
-  url(/img/hero/hero-mobile.jpg);
+  background-image: url(/img/hero/hero-mobile.jpg);
   background-size: auto 717px;
   outline: 2px dashed red;
 }
@@ -14,8 +12,8 @@
   padding-top: 140px;
 }
 .hero-title {
-	margin-bottom: 14px;
-  color: var(--blue-font, #0A224A);
+  margin-bottom: 14px;
+  color: var(--blue-font, #0a224a);
   font-family: Playfair Display, serif;
   font-size: 28px;
   width: 285px;
@@ -23,7 +21,7 @@
   text-transform: uppercase;
 }
 .hero-text {
-  color: var(--blue-font, #0A224A);
+  color: var(--blue-font, #0a224a);
   font-family: Roboto;
   font-size: 16px;
   line-height: 1.5;
@@ -35,104 +33,96 @@
   padding: 12px 65px;
   justify-content: center;
   align-items: center;
-  background: var(--blue-font, #0A224A);
-  color: var(--white, #FFF);
+  background: var(--blue-font, #0a224a);
+  color: var(--white, #fff);
   font-size: 16px;
   font-weight: 400;
-  line-height: 1.5; /* 150% */
+  line-height: 1.5;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-btn:focus,
 .hero-btn:hover {
-  background: #061835;
+  background-color: #061835;
 }
 
 @media screen and (min-width: 768px) {
   .hero {
-		
-		max-width: 768px;
-		background: none;
-		padding-top: 64px;
-		padding-bottom: 100px;
-		height: 858px;
-		}
-	.hero .container {
-		padding-top: 0;
-		padding-left: 32px;
-		padding-right: 32px;
-		
-		background-repeat: no-repeat;
-		height: 531px;
     max-width: 768px;
-		background-image: 
-		url(../img/hero/hero-tablet1.jpg),
-		url(../img/hero/hero-tablet2.jpg);
-	background-position:
-    32px bottom,
-    372px bottom;
-		background-size: 308px 329px, 367px 100%;
+    background: none;
+    padding-top: 64px;
+    padding-bottom: 100px;
+    height: 858px;
   }
-	.hero-title {		
-		margin-bottom: 410px;
-		width: 648px;
-		font-size: 50px;
-	}
-	.hero-text {
-		width: 312px;
-		margin-bottom: 30px;
-		font-size: 18px;
-	}
-	.hero-btn {
-		padding: 17px 65px;
-		font-size: 18px;
-	}	
+  .hero .container {
+    padding-top: 0;
+    padding-left: 32px;
+    padding-right: 32px;
+
+    background-repeat: no-repeat;
+    height: 531px;
+    max-width: 768px;
+    background-image: url(../img/hero/hero-tablet1.jpg),
+      url(../img/hero/hero-tablet2.jpg);
+    background-position: 32px bottom, 372px bottom;
+    background-size: 308px 329px, 367px 100%;
+  }
+  .hero-title {
+    margin-bottom: 410px;
+    width: 648px;
+    font-size: 50px;
+  }
+  .hero-text {
+    width: 312px;
+    margin-bottom: 30px;
+    font-size: 18px;
+  }
+  .hero-btn {
+    padding: 17px 65px;
+    font-size: 18px;
+  }
 }
 @media screen and (min-width: 1440px) {
-	.hero {		
-		max-width: 1440px;
-		min-height: 0;
-		height: 100%;
-		}
-		.hero .container {
-			padding-left: 60px;
-			padding-right: 60px;			
-			background-repeat: no-repeat;
-			height: 531px;
-			max-width: 1440px;
-			background-image: 
-		url(/img/hero/hero-desktop1.jpg),
-		url(/img/hero/hero-desktop2.jpg),
-		url(/img/hero/hero-desktop3.jpg);
-		background-position:
-			60px bottom,
-			395px bottom,
-			1068px top;
-			background-size: 310px 329px, 648px 530px, 312px 337px;
-		}
-		.hero-title {
-			margin-bottom: 232px;			
-		}
-		.hero-text, 
-		.hero-btn {
-			margin-left: 1008px;
-		}
+  .hero {
+    max-width: 1440px;
+    min-height: 0;
+    height: 100%;
+  }
+  .hero .container {
+    padding-left: 60px;
+    padding-right: 60px;
+    background-repeat: no-repeat;
+    height: 531px;
+    max-width: 1440px;
+    background-image: url(/img/hero/hero-desktop1.jpg),
+      url(/img/hero/hero-desktop2.jpg), url(/img/hero/hero-desktop3.jpg);
+    background-position: 60px bottom, 395px bottom, 1068px top;
+    background-size: 310px 329px, 648px 530px, 312px 337px;
+  }
+  .hero-title {
+    margin-bottom: 232px;
+  }
+  .hero-text,
+  .hero-btn {
+    margin-left: 1008px;
+  }
 }
 
-@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), 
-screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), 
-screen and (min-width: 768px) and (min-resolution: 192dpi), 
-screen and (min-width: 768px) and (min-resolution: 2dppx) {
-	.hero .container {
-		background-image: url(/img/hero/hero-tablet1-2x.jpg),
-		url(/img/hero/hero-tablet2-2x.jpg);
-	}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2),
+  screen and (min-width: 768px) and (min-resolution: 192dpi),
+  screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero .container {
+    background-image: url(/img/hero/hero-tablet1-2x.jpg),
+      url(/img/hero/hero-tablet2-2x.jpg);
+  }
 }
-@media screen and (min-width: 1440px) and (min-device-pixel-ratio: 2), 
-screen and (min-width: 1440px) and (-webkit-min-device-pixel-ratio: 2), 
-screen and (min-width: 1440px) and (min-resolution: 192dpi), 
-screen and (min-width: 1440px) and (min-resolution: 2dppx) {
-	.hero .container {
-		background-image: url(/img/hero/hero-desktop1-2x.jpg),
-		url(/img/hero/hero-desktop2-2x.jpg),
-		url(../img/hero/hero-desktop3-2x.jpg);
-	}
+@media screen and (min-width: 1440px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 1440px) and (-webkit-min-device-pixel-ratio: 2),
+  screen and (min-width: 1440px) and (min-resolution: 192dpi),
+  screen and (min-width: 1440px) and (min-resolution: 2dppx) {
+  .hero .container {
+    background-image: url(/img/hero/hero-desktop1-2x.jpg),
+      url(/img/hero/hero-desktop2-2x.jpg), url(../img/hero/hero-desktop3-2x.jpg);
+  }
 }
