--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -1,7 +1,7 @@
-<section class="subscription">
+<section class="subscription" id="subscription">
   <div class="container">
     <div class="newsleter">
-      <h2 class="title" id="subscription">Newsletter</h2>
+      <h2 class="title">Newsletter</h2>
       <p class="text">
         Every week we will send you new designs and information about sales.
       </p>
