--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,21 +1,148 @@
-/* .header {
-  padding: 20px 0;
+body {
+  font-family: "Roboto", sans-serif;
 }
 
-.nav-list {
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  display: block;
+}
+
+button {
+  cursor: pointer;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateX(-100%);
+  pointer-events: none;
+}
+
+.hidden {
+  pointer-events: none;
+  visibility: hidden;
+  position: absolute;
+  top: -100px;
+}
+
+.header-container {
+  max-width: 320px;
+  padding: 0 15px;
+  height: 88px;
+  margin: 0 auto;
+}
+
+.header {
+  background-color: #f7faff;
+}
+main {
+  margin-top: 88px;
+}
+
+.header {
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  top: 0;
+}
+
+.header-container {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
 }
 
-.nav-link {
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  line-height: 1.5;
+.header-navigation {
+  display: none;
 }
 
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
-} */
+.logo-link {
+  padding: 36px 0;
+}
+
+.close-menu-btn,
+.mob-menu-open-btn {
+  background-color: transparent;
+  border: transparent;
+  stroke: #0a224a;
+}
+
+.mob-menu {
+  position: fixed;
+  top: 88px;
+  left: 0;
+  background-color: #ffffff;
+  width: 100vw;
+  height: 100vh;
+  transition: 550ms ease-in-out;
+}
+
+.mob-nav-list {
+  display: flex;
+  flex-direction: column;
+  gap: 17px;
+  justify-content: center;
+  align-items: center;
+  /* margin-top: 202px; */
+  margin-top: 114px;
+}
+.mob-nav-link {
+  color: #0a224a;
+  font-size: 16px;
+}
+
+
+@media screen and (min-width: 375px) {
+  .header-container {
+    max-width: 375px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-container {
+    max-width: 768px;
+  }
+  .logo {
+    width: 127px;
+    height: 16px;
+  }
+  .logo-link {
+    padding: 40px 0;
+  }
+  .header-nav-link, 
+  .mob-nav-link {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header-container {
+    max-width: 1440px;
+  }
+  .header-navigation {
+    display: flex;
+  }
+
+  .mob-menu-open-btn,
+  .mob-menu {
+    display: none;
+  }
+  .header-nav-list {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    padding: 34px 0;
+    margin: 0;
+  }
+  .header-nav-link {
+    color: #0a224a;
+  }
+  .logo-link {
+    padding: 38px 0;
+  }
+}
