--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 ul {
@@ -32,9 +32,12 @@ button {
 
 .header-container {
   max-width: 320px;
-  padding: 0 15px;
+  padding: 0 16px;
   height: 88px;
   margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header {
@@ -49,12 +52,6 @@ main {
   z-index: 999;
   width: 100%;
   top: 0;
-}
-
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .header-navigation {
@@ -96,7 +93,6 @@ main {
   font-size: 16px;
 }
 
-
 @media screen and (min-width: 375px) {
   .header-container {
     max-width: 375px;
@@ -106,6 +102,7 @@ main {
 @media screen and (min-width: 768px) {
   .header-container {
     max-width: 768px;
+    padding: 0 32px;
   }
   .logo {
     width: 127px;
@@ -114,7 +111,7 @@ main {
   .logo-link {
     padding: 40px 0;
   }
-  .header-nav-link, 
+  .header-nav-link,
   .mob-nav-link {
     font-size: 18px;
   }
@@ -123,6 +120,7 @@ main {
 @media screen and (min-width: 1440px) {
   .header-container {
     max-width: 1440px;
+    padding: 0 60px;
   }
   .header-navigation {
     display: flex;
