--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
         <div class="header-logo-header-container">
           <a class="logo-link" href="./index.html"
             ><svg class="logo" width="100" height="16">
-              <use href="../img/icons.svg#icon-logo"></use></svg
+              <use href="/img/icons.svg#icon-logo"></use></svg
           ></a>
         </div>
         <nav class="header-navigation">
@@ -37,7 +37,7 @@
           data-menu-open
         >
           <svg width="32" height="32">
-            <use href="../img/icons.svg#icon-burger-menu"></use>
+            <use href="/img/icons.svg#icon-burger-menu"></use>
           </svg>
         </button>
         <button
@@ -47,7 +47,7 @@
           data-menu-close
         >
           <svg width="32" height="32">
-            <use href="../img/icons.svg#icon-close-menu"></use>
+            <use href="/img/icons.svg#icon-close-menu"></use>
           </svg>
         </button>
 
