--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,9 +1,11 @@
 <section class="hero">
   <div class="container">
     <h1 class="hero-title">Modern and minimalist furniture for you</h1>
-    <p class="hero-text">
-      Add a touch of elegance to your space with handcrafted furniture pieces
-    </p>
-    <a class="hero-btn" type="button" href="#subscription"> Subscribe </a>
+    <div class="hero-text-block">
+      <p class="hero-text">
+        Add a touch of elegance to your space with handcrafted furniture pieces
+      </p>
+      <a class="hero-btn" type="button" href="#subscription"> Subscribe </a>
+    </div>
   </div>
 </section>
