--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -42,7 +42,7 @@
             ./img/subscription-img/sub-pic-mob-x2.jpg 2x
           " />
         <source media="(min-width: 768px) and (max-width: 1439px)" srcset="
-            ./img/subscription-img/.jpg,
+            ./img/subscription-img/sub-pic-tab-x1.jpg,
             ./img/subscription-img/sub-pic-tab-x2.jpg 2x
           " />
         <source media="(min-width: 1440px)" srcset="
