--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -86,6 +86,7 @@
     max-width: 1440px;
     min-height: 0;
     height: 100%;
+    padding-bottom: 100px;
   }
   .hero .container {
     display: flex;
@@ -102,13 +103,6 @@
   }
   .hero-text-block {
     align-self: flex-end;
-  }
-  .hero-title {
-    /* margin-bottom: 232px; */
-  }
-  .hero-text,
-  .hero-btn {
-    /* margin-left: 1008px; */
   }
 }
 
