--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -1,8 +1,8 @@
 <section class="subscription" id="subscription">
   <div class="container">
     <div class="newsleter">
-      <h2 class="title">Newsletter</h2>
-      <p class="text">
+      <h2 class="subscription-title">Newsletter</h2>
+      <p class="subscription-text">
         Every week we will send you new designs and information about sales.
       </p>
       <form class="form" id="myForm">
