--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,20 +4,25 @@
                 <div class="logo-media">
                     <!-- Logo -->
                     <div class="ftr-logo">
-                        <span class="media-icons ftr-logo"><a href="" class="media-icons"></a>
+                        <span><a href="" class="media-icons"></a>
                             <svg class="ftr-media" width="100" height="16">
-                            <use href="./img/icons.svg#minimal"></use>
+                            <use href="./img/icons.svg#icon-logo"></use>
                             </svg>
                         </span>
                     </div>
                     <!-- Nav Menu -->
                     <div class="nav">
                         <ul class="ftr-nav-menu nav-text">
-                            <li class="list"><a href="" rel="noopener norefferrer" target="_blank"></a>About us</li>
-                            <li class="list"><a href="" rel="noopener norefferrer" target="_blank"></a>Our products</li>
-                            <li class="list"><a href="" rel="noopener norefferrer" target="_blank"></a>Prices</li>
-                            <li class="list"><a href="" rel="noopener norefferrer" target="_blank"></a>Bestsellers</li>
-                            <li class="list"><a href="" rel="noopener norefferrer" target="_blank"></a>Reviews</li>
+                            <li class="list"><a href="/src/partials/about_us.html" 
+                                class="ftr-link-menu" rel="noopener norefferrer" target="_blank"></a>About us</li>
+                            <li class="list"><a href="/src/partials/our_products.html" 
+                                class="ftr-link-menu" rel="noopener norefferrer" target="_blank"></a>Our products</li>
+                            <li class="list"><a href="/src/partials/price.html" 
+                                class="ftr-link-menu" rel="noopener norefferrer" target="_blank"></a>Prices</li>
+                            <li class="list"><a href="/src/partials/bestsellers.html" 
+                                class="ftr-link-menu" rel="noopener norefferrer" target="_blank"></a>Bestsellers</li>
+                            <li class="list"><a href="/src/partials/clients_reviews.html" 
+                                class="ftr-link-menu" rel="noopener norefferrer" target="_blank"></a>Reviews</li>
                         </ul>
                     </div>
                     <!-- Address -->
