--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -64,8 +64,8 @@
                 </ul>
             </div>
             <!-- Terms of Service & Privacy Policy -->
-            <div>
-                <p class="ftr-privacy">By using this website, you agree to the <span class="privacy-link">Terms of Service <a href="" class="link"></a></span> and <span class="privacy-link">Privacy Policy <a href="" class="link"></a></span></p>
+            <div class="ftr-privacy-block">
+                <p class="ftr-privacy ftr-privacy-tex">By using this website, you agree to the <span class="privacy-link">Terms of Service <a href="" class="link"></a></span> and <span class="privacy-link">Privacy Policy <a href="" class="link"></a></span></p>
             </div>
         </div>
         
