--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -37,7 +37,7 @@
                         <ul class="nav-text">
                             <li class="list"><a href="tel:+380669384758"></a>+380669384758</li>
                             <li class="list"><a href="tel:+380679384758"></a>+380679384758</li>
-                            <!-- <li class="list"><a href="minimal.furniture@gmail.com"></a>minimal.furniture@gmail.com</li> -->
+                            <li class="list"><a href="minimal.furniture@gmail.com"></a>minimal.furniture@gmail.com</li>
                         </ul>
                     </div>
                 </div>  
@@ -65,7 +65,7 @@
             </div>
             <!-- Terms of Service & Privacy Policy -->
             <div class="ftr-privacy-block">
-                <p class="ftr-privacy ftr-privacy-tex">By using this website, you agree to the <span class="privacy-link">Terms of Service <a href="" class="link"></a></span> and <span class="privacy-link">Privacy Policy <a href="" class="link"></a></span></p>
+                <p class="ftr-privacy ftr-privacy-text">By using this website, you agree to the <span class="privacy-link">Terms of Service <a href="" class="link"></a></span> and <span class="privacy-link">Privacy Policy <a href="" class="link"></a></span></p>
             </div>
         </div>
         
