--- a/src/css/clients_reviews.css
+++ b/src/css/clients_reviews.css
@@ -1,77 +1,94 @@
-.contaiiner {
-    margin: 0 auto;
-    padding-left: 16px;
-    padding-right: 16px;
-}
+
 
 .clients {
-    background-color: #F7FAFF;
-    padding: 36px 0;
+  background-color: #f7faff;
+  padding: 36px 0;
 }
 
+.clients-section {
+  display: block;
+}
 
 .clients-title {
-            max-width: 233px;
-            font-size: 25px;
-            line-height: 1.5;
-            text-transform: uppercase;
-            color: #0A224A;
-            margin-bottom: 30px;
-            margin: 0 auto;
+  max-width: 233px;
+  font-size: 28px;
+  line-height: 1.5;
+  text-transform: uppercase;
+  color: #0a224a;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 
-.clients-subtitle {
-font-weight: 700;
-font-size: 18px;
-line-height: 32px;
-text-transform: uppercase;
-color: #0A224A;
+.clients-list {
+    display: flex;
 }
 
 .clients-item {
-    background-color: #fff;
+  display: block;
+  background-color: #fff;
+  max-width: 343px;
+  padding: 24px;
+}
+
+.clients-item:not(:first-child) {
+  display: none;
+}
+
+.clients-subtitle {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 32px;
+  text-transform: uppercase;
+  color: #0a224a;
 }
 
 .clients-pic {
-    margin-top: 24px;
-    border-radius: 48px;
+  border-radius: 48px;
 }
 
 .info-wrap {
-    display: flex;
-    margin-left: 15px;
+  display: flex;
 }
 
 .text-wrap {
-    display: block;
-    margin-left: 14px;
-    margin-top: 24px;
+  display: block;
+  margin-left: 14px;
 }
 
 .clients-bio {
-    max-width: 280px;
-}
-
-
-@media screen and (min-width: 375px) {
-    
-.container {
-    max-width: 373px;
-}
-
-.clients-title {
-    font-size: 28px;
-}
-
-
-.clients-pic {
-  margin-left: 24px;
   margin-top: 24px;
-    }
+  max-width: 280px;
+}
+/* 
+@media screen and (min-width: 375px) {
+  .container {
+    max-width: 375px;
+  }
+} */
 
 
 
 
+@media screen and (min-width: 768px) {
+  
+.container {
+    min-width: 768px;
+}
+
+.clients-list {
+    gap: 16px;
+}
+
+  /* .clients-item {
+    width: calc((100% - 16px) / 2);
+  } */
 
 
+  .clients-item:not(:first-child) {
+    display: block;
+  }
+
+  .clients-item:not(:nth-child(-n + 2)) {
+    display: none;
+  }
 }
