--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -15,12 +15,6 @@ width: 375px;
 color: var(#FFF);
 justify-content: space-between;
 }
-    
-@media screen and (min-width: 768px) and (max-width: 1440px) {
-    .container {
-        max-width: 768px;
-    }
-}
 
 .footer-page {
 background-color: var(--blue-font);
@@ -41,6 +35,11 @@ font-size: 16px;
     display: flex;
 }
 
+@media screen and (min-width: 768px) {
+    .logo-media-block {
+        justify-content: space-between;
+    }
+}
 
 /* Logo & Media Icons */
 
@@ -83,10 +82,6 @@ color: var(--white, #FFF);
 font-size: 16px;
 font-weight: 400;
 line-height: 1.5em;
-}
-
-.ftr-contacts > .nav-text:last-child {
-    display: no;
 }
 
 .ftr-link-menu {
