--- a/src/partials/bestsellers.html
+++ b/src/partials/bestsellers.html
@@ -5,30 +5,30 @@
       <picture>
         <source
           srcset="
-            ../img/bestsellers/bed-1x-des.jpg 1x,
-            ../img/bestsellers/bed-2x-des.jpg 2x
+            ./img/bestsellers/bed-1x-desk.jpg 1x,
+            ./img/bestsellers/bed-2x-desk.jpg 2x
           "
           media="(min-width:1440px)"
         />
         <source
           srcset="
-            ../img/bestsellers/bed-1x-tab.jpg 1x,
-            ../img/bestsellers/bed-2x-tab.jpg 2x
+            ./img/bestsellers/bed-1x-tab.jpg 1x,
+            ./img/bestsellers/bed-2x-tab.jpg 2x
           "
           media="(min-width:768px)"
         />
         <source
           srcset="
-            ../img/bestsellers/bed-1x-mob.jpg 1x,
-            ../img/bestsellers/bed-2x-mob.jpg 2x
+            ./img/bestsellers/bed-1x-mob.jpg 1x,
+            ./img/bestsellers/bed-2x-mob.jpg 2x
           "
           media="(min-width:320px)"
         />
         <img
-          class="bestsellers-image"
-          src="../img/bestsellers/bed-1x-des.jpg"
+          class="bestsellers-image bestsellers-big_image"
+          src="./img/bestsellers/bed-1x-desk.jpg"
           alt="Modern bed"
-          width="704px"
+          width="343px"
         />
       </picture>
 
@@ -42,28 +42,28 @@
           <picture>
             <source
               srcset="
-                ../img/bestsellers/chairs-1x-des.jpg 1x,
-                ../img/bestsellers/chairs-2x-des.jpg 2x
+                ./img/bestsellers/chairs-1x-desk.jpg 1x,
+                ./img/bestsellers/chairs-2x-desk.jpg 2x
               "
               media="(min-width:1440px)"
             />
             <source
               srcset="
-                ../img/bestsellers/chairs-1x-tab.jpg 1x,
-                ../img/bestsellers/chairs-2x-tab.jpg 2x
+                ./img/bestsellers/chairs-1x-tab.jpg 1x,
+                ./img/bestsellers/chairs-2x-tab.jpg 2x
               "
               media="(min-width:768px)"
             />
             <source
               srcset="
-                ../img/bestsellers/chairs-1x-mob.jpg 1x,
-                ../img/bestsellers/chairs-2x-mob.jpg 2x
+                ./img/bestsellers/chairs-1x-mob.jpg 1x,
+                ./img/bestsellers/chairs-2x-mob.jpg 2x
               "
               media="(min-width:320px)"
             />
             <img
-              class="bestsellers-image"
-              src="../img/bestsellers/chairs-1x-des.jpg"
+              class="bestsellers-image bestsellers-little_image"
+              src="./img/bestsellers/chairs-1x-desk.jpg"
               alt="Lounge chairs"
               width="343px"
             />
@@ -79,28 +79,28 @@
           <picture>
             <source
               srcset="
-                ../img/bestsellers/ind_chair-1x-des.jpg 1x,
-                ../img/bestsellers/ind_chair-2x-des.jpg 2x
+                ./img/bestsellers/ind_chair-1x-desk.jpg 1x,
+                ./img/bestsellers/ind_chair-2x-desk.jpg 2x
               "
               media="(min-width:1440px)"
             />
             <source
               srcset="
-                ../img/bestsellers/ind_chair-1x-tab.jpg 1x,
-                ../img/bestsellers/ind_chair-2x-tab.jpg 2x
+                ./img/bestsellers/ind_chair-1x-tab.jpg 1x,
+                ./img/bestsellers/ind_chair-2x-tab.jpg 2x
               "
               media="(min-width:768px)"
             />
             <source
               srcset="
-                ../img/bestsellers/ind_chair-1x-mob.jpg 1x,
-                ../img/bestsellers/ind_chair-2x-mob.jpg 2x
+                ./img/bestsellers/ind_chair-1x-mob.jpg 1x,
+                ./img/bestsellers/ind_chair-2x-mob.jpg 2x
               "
               media="(min-width:320px)"
             />
             <img
-              class="bestsellers-image"
-              src="../img/bestsellers/ind_chair-1x-des.jpg"
+              class="bestsellers-image bestsellers-little_image"
+              src="./img/bestsellers/ind_chair-1x-desk.jpg"
               alt="Industrial chair"
               width="343px"
             />
@@ -116,28 +116,28 @@
           <picture>
             <source
               srcset="
-                ../img/bestsellers/stand-1x-des.jpg 1x,
-                ../img/bestsellers/stand-2x-des.jpg 2x
+                ./img/bestsellers/stand-1x-desk.jpg 1x,
+                ./img/bestsellers/stand-2x-desk.jpg 2x
               "
               media="(min-width:1440px)"
             />
             <source
               srcset="
-                ../img/bestsellers/stand-1x-tab.jpg 1x,
-                ../img/bestsellers/stand-2x-tab.jpg 2x
+                ./img/bestsellers/stand-1x-tab.jpg 1x,
+                ./img/bestsellers/stand-2x-tab.jpg 2x
               "
               media="(min-width:768px)"
             />
             <source
               srcset="
-                ../img/bestsellers/stand-1x-mob.jpg 1x,
-                ../img/bestsellers/stand-2x-mob.jpg 2x
+                ./img/bestsellers/stand-1x-mob.jpg 1x,
+                ./img/bestsellers/stand-2x-mob.jpg 2x
               "
               media="(min-width:320px)"
             />
             <img
-              class="bestsellers-image"
-              src="../img/bestsellers/stand-1x-des.jpg"
+              class="bestsellers-image bestsellers-little_image"
+              src="./img/bestsellers/stand-1x-desk.jpg"
               alt="Sleek stand"
               width="343px"
             />
@@ -153,28 +153,28 @@
           <picture>
             <source
               srcset="
-                ../img/bestsellers/sofa-1x-des.jpg 1x,
-                ../img/bestsellers/sofa-2x-des.jpg 2x
+                ./img/bestsellers/sofa-1x-desk.jpg 1x,
+                ./img/bestsellers/sofa-2x-desk.jpg 2x
               "
               media="(min-width:1440px)"
             />
             <source
               srcset="
-                ../img/bestsellers/sofa-1x-tab.jpg 1x,
-                ../img/bestsellers/sofa-2x-tab.jpg 2x
+                ./img/bestsellers/sofa-1x-tab.jpg 1x,
+                ./img/bestsellers/sofa-2x-tab.jpg 2x
               "
               media="(min-width:768px)"
             />
             <source
               srcset="
-                ../img/bestsellers/sofa-1x-mob.jpg 1x,
-                ../img/bestsellers/sofa-2x-mob.jpg 2x
+                ./img/bestsellers/sofa-1x-mob.jpg 1x,
+                ./img/bestsellers/sofa-2x-mob.jpg 2x
               "
               media="(min-width:320px)"
             />
             <img
-              class="bestsellers-image"
-              src="../img/bestsellers/sofa-1x-des.jpg"
+              class="bestsellers-image bestsellers-little_image"
+              src="./img/bestsellers/sofa-1x-desk.jpg"
               alt="Grey sofa"
               width="343px"
             />
