--- a/src/css/bestsellers.css
+++ b/src/css/bestsellers.css
@@ -3,6 +3,9 @@
 
 .bestsellers-container {
   margin-bottom: 64px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .bestsellers-title {
@@ -13,8 +16,10 @@
   text-align: center;
   margin-bottom: 21px;
 }
-.bestsellers-image-wrap {
-  margin-bottom: 30px;
+.bestsellers-list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 .bestsellers-image {
   margin-bottom: 14px;
@@ -31,11 +36,39 @@
   font-weight: 700;
   line-height: 1.5;
 }
-.bestsellers-list {
+
+.bestsellers-item:nth-child(n + 3) {
+  display: none;
 }
-.bestsellers-item {
+
+@media screen and (min-width: 768px) {
+  .bestsellers-container {
+    max-width: 768px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+  .bestsellers-big_image {
+    width: 704px;
+  }
+  .bestsellers-item:nth-child(n + 3) {
+    display: block;
+  }
+  .bestsellers-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 32;
+    width: calc(100% - 32 px) / 2;
+  }
 }
-.bestsellers-item-wrap {
-}
-.bestsellers-image {
+
+@media screen and (min-width: 1440px) {
+  .bestsellers-big_image {
+    width: 536px;
+  }
+  .bestsellers-container {
+    max-width: 1440px;
+    padding-left: 172px;
+    padding-right: 172px;
+  }
 }
