--- a/src/partials/about_us.html
+++ b/src/partials/about_us.html
@@ -1,6 +1,60 @@
 <section class="about-us">
   <div class="container">
-    <div class="about-us-contant"></div>
-    <div class="about-us-image"></div>
+    <div class="about-us-content">
+      <h3 class="about-us-title">About us</h3>
+      <h2 class="about-us-subtitle">
+        Our сraftsmanship: сreating unique handmade furniture
+      </h2>
+      <p class="about-us-text">
+        Discover the inspiration behind our modern and minimalist designs, and
+        see how we bring them to life through our skilled craftsmanship.
+      </p>
+      <ul class="about-us-statistic-list">
+        <li class="about-us-statistic-item">
+          <p class="about-us-statistic-number">5+</p>
+          <p class="about-us-text">
+            Years of experience creating handcrafted furniture
+          </p>
+        </li>
+        <li class="about-us-statistic-item">
+          <p class="about-us-statistic-number">100%</p>
+          <p class="about-us-text">
+            Sustainably sourced materials used in all of our furniture
+          </p>
+        </li>
+        <li class="about-us-statistic-item">
+          <p class="about-us-statistic-number">500+</p>
+          <p class="about-us-text">
+            Unique furniture designs crafted by our skilled artisans
+          </p>
+        </li>
+      </ul>
+    </div>
+    <div class="about-us-image">
+      <picture>
+        <source
+          srcset="
+            ./img/about-us/about-us-1x.jpg,
+            ./img/about-us/about-us-2x.jpg
+          "
+          media="(min-width:1440px)"
+        />
+        <source
+          srcset="
+            ./img/about-us/about-us-tablet-1x.jpg,
+            ./img/about-us/about-us-tablet-2x.jpg
+          "
+          media="(min-width:768px)"
+        />
+        <source
+          srcset="
+            ./img/about-us/about-us-mobile-1x.jpg,
+            ./img/about-us/about-us-mobile-2x.jpg
+          "
+          media="(min-width:320px)"
+        />
+        <img src="../img/about-us/about-us-1x" alt="sofa" />
+      </picture>
+    </div>
   </div>
 </section>
