--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,7 +5,7 @@
                 <!-- logo -->
                 <span class="media-icons"><a href=""></a>
                     <svg class="ftr-media" width="100" height="16">
-                    <use href="./img/icons.svg#minimal"></use>
+                    <use href="./img/icons.svg#icon-logo"></use>
                     </svg>
                 </span>
                 <!-- nav -->
